Created seeds but havent yet found a good way to save the info