@@ -1,5 +1,6 @@
 package com.mindre.pensionat.Services.Impl;
 
+import com.mindre.pensionat.Dtos.EventDto;
 import com.mindre.pensionat.Dtos.RoomDto;
 import com.mindre.pensionat.Models.Event;
 import com.mindre.pensionat.Models.Room;
@@ -10,6 +11,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,29 +22,33 @@ public class RoomServiceImpl implements RoomService {
 
     @Override
     public RoomDto findRoomById(Long id) {
-        Room room = repo.findById(id).orElseThrow(()-> new RuntimeException("Room not found"));
+        Room room = repo.findById(id).orElseThrow(() -> new RuntimeException("Room not found"));
         return roomToRoomDto(room);
     }
 
     @Override
     public List<RoomDto> findAllRooms() {
-        return repo.findAll().stream().map(room -> roomToRoomDto(room)).toList();
-
+        return repo.findAll().stream().map(this::roomToRoomDto).collect(Collectors.toList());
     }
 
     @Override
     public RoomDto roomToRoomDto(Room room) {
-        Event event = room.getEvent();
-
+        List<EventDto> eventDtos = room.getEvents().stream().map(this::eventToEventDto).collect(Collectors.toList());
         return RoomDto.builder()
                 .id(room.getId())
                 .roomType(room.getRoomType())
                 .roomSize(room.getRoomSize())
                 .amountOfBeds(room.getAmountOfBeds())
-                .event(new Event(event.getId(), event.getEmployee(),
-                        event.getClosedDoor(), event.getCleanStart(),
-                        event.getCleanEnd(),event.getOpenedDoor())).build();
-
+                .events(eventDtos)
+                .build();
     }
 
+    private EventDto eventToEventDto(Event event) {
+        return EventDto.builder()
+                .id(event.getId())
+                .employeeName(event.getEmployeeName())
+                .eventType(event.getEventType())
+                .eventTimeStamp(event.getEventTimeStamp())
+                .build();
+    }
 }
